--- a/.env
+++ b/.env
@@ -1,29 +1,30 @@
 # Postgres Live
-DB_HOST=fullstack-postgres                      # used when running the app with docker
+DB_HOST=fullstack-postgres                      
 # DB_HOST=127.0.0.1                             # when running the app without docker 
 DB_DRIVER=postgres
 API_SECRET=98hbun98h                            # Used for creating a JWT. Can be anything 
 DB_USER=steven
-DB_PASSWORD=
+DB_PASSWORD=password
 DB_NAME=fullstack_api
 DB_PORT=5432 
 
+# Used by pgadmin service 
 PGADMIN_DEFAULT_EMAIL=live@admin.com
 PGADMIN_DEFAULT_PASSWORD=password
 
 # Postgres Test
-TEST_DB_HOST=postgres_test                      # used when running the app with docker
+TEST_DB_HOST=postgres_test                      
 # TEST_DB_HOST=127.0.0.1                        # when running the app without docker 
 TEST_DB_DRIVER=postgres
 TEST_API_SECRET=98hbun98h
 TEST_DB_USER=steven
-TEST_DB_PASSWORD=
+TEST_DB_PASSWORD=password
 TEST_DB_NAME=fullstack_api_test
 TEST_DB_PORT=5432
 
 
 # # Mysql Live
-# DB_HOST=fullstack-mysql                       # used when running the app with docker
+# DB_HOST=fullstack-mysql                       
 # # DB_HOST=127.0.0.1                           # when running the app without docker 
 # DB_DRIVER=mysql 
 # API_SECRET=98hbun98h                          # Used for creating a JWT. Can be anything 
@@ -34,7 +35,7 @@ TEST_DB_PORT=5432
 
 
 # # Mysql Test
-# TEST_DB_HOST=mysql_test                        # used when running the app with docker
+# TEST_DB_HOST=mysql_test                        
 # # TEST_DB_HOST=127.0.0.1                       # when running the app without docker 
 # TEST_DB_DRIVER=mysql
 # TEST_API_SECRET=98hbun98h
